
	* t/PangoAttributes.t
	* t/PangoContext.t
	* t/PangoFont.t
	* t/PangoGravity.t
	* t/PangoLayout.t
	* t/PangoMatrix.t
	* t/PangoTypes.t
	* xs/PangoAttributes.xs
	* xs/PangoContext.xs
	* xs/PangoFont.xs
	* xs/PangoLayout.xs
	* xs/PangoMatrix.xs
	* xs/PangoTypes.xs: Refer to stable releases in version checks.

	* t/PangoCairo.t
	* xs/PangoCairo.xs: Wrap pango_cairo_context_set_shape_renderer.

2007-06-16	kaffeetisch

	* maps-2.12
	* xs_files-2.12
	* t/GtkScaleButton.t
	* t/GtkVolumeButton.t
	* xs/GtkScaleButton.xs
	* xs/GtkVolumeButton.xs: Add support for GtkScaleButton and
	GtkVolumeButton.

	* maps-2.12
	* xs_files-2.12
	* t/GtkRecentAction.t
	* xs/GtkRecentAction.xs: Add support for GtkRecentAction.

	* t/GdkPixbufLoader.t: Use more adapted size values to test
	load-time scaling in order to avoid test failures due to rounding.

	* t/GtkPageSetup.t
	* xs/GtkPageSetup.xs: Wrap gtk_page_setup_new_from_file,
	gtk_page_setup_to_file, gtk_page_setup_new_from_key_file, and
	gtk_page_setup_to_key_file.

	* t/GtkPaperSize.t
	* xs/GtkPaperSize.xs: Wrap gtk_paper_size_new_from_key_file,
	gtk_paper_size_to_key_file, and gtk_paper_size_get_paper_sizes.

	* t/GtkPrintSettings.t
	* xs/GtkPrintSettings.xs: Wrap gtk_print_settings_new_from_file,
	gtk_print_settings_to_file, gtk_print_settings_new_from_key_file,
	and gtk_print_settings_to_key_file.  Also fix the test fail to
	actually run any tests.

	* t/GtkTooltip.t
	* xs/GtkTooltip.xs: Wrap gtk_tooltip_set_text.

	* t/GtkWidget.t
	* xs/GtkWidget.xs: Wrap gtk_widget_set_tooltip_text,
	gtk_widget_get_tooltip_text, gtk_widget_set_tooltip_markup,
	gtk_widget_get_tooltip_markup, and gtk_widget_modify_cursor.

	* t/GtkIconTheme.t
	* xs/GtkIconTheme.xs: Wrap gtk_icon_theme_list_contexts and
	gtk_icon_theme_choose_icon.

2007-06-12	kaffeetisch

	* t/PangoLayout.t
	* xs/PangoLayout.xs: Add support for the new PangoLogAttr property
	is_expandable_space.

	* t/GtkAction.t
	* xs/GtkAction.xs: Wrap gtk_action_create_menu.

	* t/GtkEntry.t